--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,14 @@
-theme: Minimal
+lsi: false
+safe: true
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
+title: [Drew Kuerzi's Senior Project Proposal]
+description: [This site describes the features of my project along with similar applications and their features.]
