--- a/hcat_app/package.json
+++ b/hcat_app/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^5.3.2",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "autoprefixer": "^10",
