--- a/hcat_app/package.json
+++ b/hcat_app/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
-    "next": "13.5.4",
+    "next": "^14.0.2-canary.1",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^10",
