--- a/hcat_app/package.json
+++ b/hcat_app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "json-loader": "^0.5.7",
     "next": "^14.0.2-canary.1",
     "react": "^18",
     "react-dom": "^18",
