--- a/hcat_app/package.json
+++ b/hcat_app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10",
+    "cypress": "^13.6.0",
     "postcss": "^8",
     "tailwindcss": "^3"
   }
